--- a/Challenge2.Console/Challenge2.Console.csproj
+++ b/Challenge2.Console/Challenge2.Console.csproj
@@ -43,11 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenge2.Repository\Challenge2.Repository.csproj">
+      <Project>{7082DEDE-D082-4B76-93B4-17A68650E604}</Project>
+      <Name>Challenge2.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
