--- a/Challenge3.Console/Challenge3.Console.csproj
+++ b/Challenge3.Console/Challenge3.Console.csproj
@@ -43,11 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenge3.Repository\Challenge3.Repository.csproj">
+      <Project>{D22E30CA-F134-480F-A725-F9B4BFDA6206}</Project>
+      <Name>Challenge3.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
