--- a/Challenge1.Repository/Challenge1.Repository.csproj
+++ b/Challenge1.Repository/Challenge1.Repository.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Challenge1.Repository.cs" />
+    <Compile Include="POCOs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
