--- a/Challenge2.UnitTests/Challenge2.UnitTests.csproj
+++ b/Challenge2.UnitTests/Challenge2.UnitTests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Challenge2.UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
