--- a/Challenge1.UnitTests/Challenge1.UnitTests.csproj
+++ b/Challenge1.UnitTests/Challenge1.UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenge1.Repository\Challenge1.Repository.csproj">
+      <Project>{f83ec30e-eff0-42ef-a49b-e68b9aaaf887}</Project>
+      <Name>Challenge1.Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
