--- a/Challenge2.UnitTests/Challenge2.UnitTests.csproj
+++ b/Challenge2.UnitTests/Challenge2.UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenge2.Repository\Challenge2.Repository.csproj">
+      <Project>{7082DEDE-D082-4B76-93B4-17A68650E604}</Project>
+      <Name>Challenge2.Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
