--- a/Challenge3.UnitTests/Challenge3.UnitTests.csproj
+++ b/Challenge3.UnitTests/Challenge3.UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenge3.Repository\Challenge3.Repository.csproj">
+      <Project>{d22e30ca-f134-480f-a725-f9b4bfda6206}</Project>
+      <Name>Challenge3.Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
